# sdlgl3-wavefront

./: CMakeLists.txt  Makefile  README.md
dependencies/tinyobjloader/: CMakeCache.txt  Makefile  cmake_install.cmake  tinyobjloader.cbp  tinyobjloader.layout
include/: BinaryData.h  Camera.h  Common.h  Material.h  Renderer.h  SceneNode.h  Shader.h  Terrain.h  Texture.h
models/: human.mtl  nexuiz2.mtl  portland.mtl  portland2.mtl  portland3.mtl
shaders/: default.frag  default.vert
src/: BinaryData.cpp  Camera.cpp  Frustum.cpp  Renderer.cpp  SceneNode.cpp  Shader.cpp  Terrain.cpp  Texture.cpp  main.cpp
textures/: brown_eye.tga  nexuiz_wall.tga  portland.mtl  road.tga
